# Choom

./: .gitignore  .gitleaks.toml  CONDITIONAL-TRIGGERS.md  GOOGLE-OAUTH-SETUP.md  PLAN-MODE.md  README.md  SAFETY_CONTRACT.md  SKILLS-GUIDE.md
.githooks/: install.sh  pre-commit
choom-profiles/example/: profile.json  system-prompt.md
docs/: index.html  privacy.html
memory-server/: pyproject.toml  requirements.txt  run.py  run.sh  setup.sh
memory-server/src/: __init__.py  memory_http_wrapper.py  memory_mcp.py
nextjs-app/: .env.example  .eslintrc.json  .gitignore  README.md  eslint.config.mjs  jest.config.js  next.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.ts  tsconfig.json
nextjs-app/__tests__/: agentic-loop-guards.test.ts  agentic-loop-revamp.test.ts  integration-live.sh  nudge-regex.test.ts  save-generated-image.test.ts  weather-api-key.test.ts  workspace-image-write.test.ts
nextjs-app/app/: globals.css  icon.tsx  layout.tsx  page.tsx  providers.tsx
nextjs-app/lib/: anthropic-client.ts  audio-lock.ts  audio-viseme-analyzer.ts  bridge-config-store.ts  claim-verifier.ts  code-sandbox.ts  compaction-service.ts  config.ts  db.ts  execution-trace.ts  forgerag-client.ts  google-client.ts  gpu-lock.ts  group-chat-runner.ts  group-model-config.ts  homeassistant-service.ts  idle-animations.ts  image-gen-client.ts  llm-client.ts  local-time-parse.ts  log-store.ts  memory-client.ts  model-profiles.ts  owner.ts  pdf-service.ts  pivot-hint.ts  planner-loop.ts  playwright-service.ts  project-service.ts  room-image-describe.ts  store.ts  (+20 more)
(+261 files in other folders)
